Added SO2, debugged CH4

--- a/TROPOMI/TROPOMI_CH4.ipynb
+++ b/TROPOMI/TROPOMI_CH4.ipynb
@@ -33,7 +33,7 @@
     "# More uncommon imports -- make sure you have satellite_processing_functions.py in the same directory\n",
     "import netCDF4 as nc\n",
     "import geopandas as gpd\n",
-    "from satellite_processing_functions import convert_to_string, new_grid, read_scattered_TROPOMI_data, read_scattered_TROPOMI_data_with_geolocations, regrid_scattered_data\n",
+    "from satellite_processing_functions import convert_to_string, new_grid, read_scattered_TROPOMI_data, regrid_scattered_data\n",
     "import shapely\n",
     "\n",
     "# Mapping functions -- not required to process the data, but nice to plot as a sanity check!\n",
@@ -108,11 +108,11 @@
     "            fns = glob(f\"{prefix}/S5P_OFFL_L2__CH4____{year}{month}{day}*.nc\") # Array with all of that day's swaths\n",
     "            \n",
     "            for fn in fns:\n",
-    "                gdf_i = read_scattered_TROPOMI_data_with_geolocations(fn, data_type, bounds = geolocation_bounds);\n",
+    "                gdf_i = read_scattered_TROPOMI_data(fn, data_type, bounds = geolocation_bounds, geolocation = True);\n",
     "            \n",
-    "                if len(gdf) == 0:\n",
+    "                if len(gdf) == 0 & len(gdf_i) > 0:\n",
     "                    gdf = gdf_i.copy()\n",
-    "                else:\n",
+    "                elif len(gdf_i) > 0:\n",
     "                    gdf = pd.concat([gdf, gdf_i], axis = 0)\n",
     "\n",
     "            # gdf.to_csv(f\"CH4_TROPOMI_{year}{month}{day}_with_footprints.csv\")"
@@ -225,9 +225,9 @@
     "            for fn in fns:\n",
     "                df_i = read_scattered_TROPOMI_data(fn, data_type, bounds = geolocation_bounds)\n",
     "\n",
-    "                if len(daily_df) == 0:\n",
+    "                if (len(daily_df) == 0) & (len(df_i) > 0):\n",
     "                    daily_df = df_i\n",
-    "                else:\n",
+    "                elif (len(df_i) > 0):\n",
     "                    daily_df = pd.concat([daily_df, df_i], axis = 0)\n",
     "\n",
     "            # If there is data on that day, regrid!\n",
@@ -249,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "<cartopy.mpl.geocollection.GeoQuadMesh at 0x14fcc9dad610>"
+       "<cartopy.mpl.geocollection.GeoQuadMesh at 0x145a210c0d90>"
       ]
      },
      "execution_count": 7,
@@ -304,14 +304,6 @@
     "im = daily_df.plot('methane_mixing_ratio_bias_corrected', ax = ax, cmap = 'viridis', label = 'Hi', legend=True, legend_kwds={\"label\": \"Methane mixing ratio (corrected) \\n[ppbv]\"})\n",
     "ax.set_title(\"TROPOMI Methane Over California, 2021-06-29\", weight = 'bold');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56f3adfb-32cb-4f35-9951-07e1627dcd8a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
