--- a/Vegetation_Indices/TROPOSIF_Downscaling.ipynb
+++ b/Vegetation_Indices/TROPOSIF_Downscaling.ipynb
@@ -13,12 +13,12 @@
     "\n",
     "Last updated: 22 May 2025\n",
     "\n",
-    "This script reads in TROPOSIF data through two different methods. "
+    "This script upsamples and downscales TROPOSIF data based on the methodology described in [Turner et al. (2020)](https://bg.copernicus.org/articles/17/405/2020/). Before running this script, you need to run the VIIRS_Tiles.ipynb script and save out the output as its own file. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "e654120a-f894-46b4-8bb8-7fcd954255f9",
    "metadata": {},
    "outputs": [],
@@ -37,8 +37,6 @@
     "import shapely\n",
     "import xesmf as xe\n",
     "import re # Import regular expressions\n",
-    "\n",
-    "from scipy.interpolate import LinearNDInterpolator as lNDI\n",
     "\n",
     "from satellite_processing_functions import convert_to_string, new_grid, read_scattered_TROPOMI_data, regrid_scattered_data, read_viirs_data\n",
     "from processing_viirs_sinusoidal_grid import sinusoidal_grid;\n",
@@ -80,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "d1fd02cb-d658-47d1-8faf-f7b755b27a52",
    "metadata": {},
    "outputs": [],
@@ -125,222 +123,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "014cbb9a-d11d-4ee2-8440-4d1d8b087eab",
+   "id": "9aface6b-f720-4470-bf75-b27a6a44c2e5",
    "metadata": {},
    "source": [
     "---\n",
     "# Part II: VIIRS Data Processing\n",
     "\n",
-    "We'll use the read_viirs_function from the satellite_processing_functions script to get the raw data, followed by regridding onto a regular grid."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "996d5f83-2573-464b-b445-eac336a97cd1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compile_viirs_data(viirs_fn, geolocation_bounds):\n",
-    "    df_day = pd.DataFrame()\n",
-    "\n",
-    "    # Loop through files in the glob array\n",
-    "    for viirs_f in viirs_fn: \n",
-    "        tile_data = read_viirs_data(viirs_f, geolocation_bounds)\n",
-    "\n",
-    "        if len(tile_data) > 0:\n",
-    "            df_day = pd.concat([df_day, tile_data], ignore_index=True)\n",
-    "\n",
-    "    return df_day;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "553a9a51-ac72-436d-8412-ddaa13ea6222",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipped this tile because data doesn't intersect bounds.\n",
-      "Finished processing 2018-05-01 00:00:00 ****************************\n",
-      "No files available for 2018-05-02 00:00:00\n",
-      "Finished processing 2018-05-02 00:00:00 ****************************\n",
-      "No files available for 2018-05-03 00:00:00\n",
-      "Finished processing 2018-05-03 00:00:00 ****************************\n",
-      "No files available for 2018-05-04 00:00:00\n",
-      "Finished processing 2018-05-04 00:00:00 ****************************\n",
-      "No files available for 2018-05-05 00:00:00\n",
-      "Finished processing 2018-05-05 00:00:00 ****************************\n",
-      "No files available for 2018-05-06 00:00:00\n",
-      "Finished processing 2018-05-06 00:00:00 ****************************\n",
-      "No files available for 2018-05-07 00:00:00\n",
-      "Finished processing 2018-05-07 00:00:00 ****************************\n",
-      "No files available for 2018-05-08 00:00:00\n",
-      "Finished processing 2018-05-08 00:00:00 ****************************\n",
-      "Skipped this tile because data doesn't intersect bounds.\n",
-      "Finished processing 2018-05-09 00:00:00 ****************************\n",
-      "No files available for 2018-05-10 00:00:00\n",
-      "Finished processing 2018-05-10 00:00:00 ****************************\n",
-      "No files available for 2018-05-11 00:00:00\n",
-      "Finished processing 2018-05-11 00:00:00 ****************************\n",
-      "No files available for 2018-05-12 00:00:00\n",
-      "Finished processing 2018-05-12 00:00:00 ****************************\n",
-      "No files available for 2018-05-13 00:00:00\n",
-      "Finished processing 2018-05-13 00:00:00 ****************************\n",
-      "No files available for 2018-05-14 00:00:00\n",
-      "Finished processing 2018-05-14 00:00:00 ****************************\n",
-      "No files available for 2018-05-15 00:00:00\n",
-      "Finished processing 2018-05-15 00:00:00 ****************************\n",
-      "No files available for 2018-05-16 00:00:00\n",
-      "Finished processing 2018-05-16 00:00:00 ****************************\n",
-      "Skipped this tile because data doesn't intersect bounds.\n",
-      "Finished processing 2018-05-17 00:00:00 ****************************\n",
-      "No files available for 2018-05-18 00:00:00\n",
-      "Finished processing 2018-05-18 00:00:00 ****************************\n",
-      "No files available for 2018-05-19 00:00:00\n",
-      "Finished processing 2018-05-19 00:00:00 ****************************\n",
-      "No files available for 2018-05-20 00:00:00\n",
-      "Finished processing 2018-05-20 00:00:00 ****************************\n",
-      "No files available for 2018-05-21 00:00:00\n",
-      "Finished processing 2018-05-21 00:00:00 ****************************\n",
-      "No files available for 2018-05-22 00:00:00\n",
-      "Finished processing 2018-05-22 00:00:00 ****************************\n",
-      "No files available for 2018-05-23 00:00:00\n",
-      "Finished processing 2018-05-23 00:00:00 ****************************\n",
-      "No files available for 2018-05-24 00:00:00\n",
-      "Finished processing 2018-05-24 00:00:00 ****************************\n",
-      "Skipped this tile because data doesn't intersect bounds.\n",
-      "Finished processing 2018-05-25 00:00:00 ****************************\n",
-      "No files available for 2018-05-26 00:00:00\n",
-      "Finished processing 2018-05-26 00:00:00 ****************************\n",
-      "No files available for 2018-05-27 00:00:00\n",
-      "Finished processing 2018-05-27 00:00:00 ****************************\n",
-      "No files available for 2018-05-28 00:00:00\n",
-      "Finished processing 2018-05-28 00:00:00 ****************************\n",
-      "No files available for 2018-05-29 00:00:00\n",
-      "Finished processing 2018-05-29 00:00:00 ****************************\n",
-      "No files available for 2018-05-30 00:00:00\n",
-      "Finished processing 2018-05-30 00:00:00 ****************************\n",
-      "No files available for 2018-05-31 00:00:00\n",
-      "Finished processing 2018-05-31 00:00:00 ****************************\n",
-      "No files available for 2018-06-01 00:00:00\n",
-      "Finished processing 2018-06-01 00:00:00 ****************************\n",
-      "Skipped this tile because data doesn't intersect bounds.\n",
-      "Finished processing 2018-06-02 00:00:00 ****************************\n",
-      "No files available for 2018-06-03 00:00:00\n",
-      "Finished processing 2018-06-03 00:00:00 ****************************\n",
-      "No files available for 2018-06-04 00:00:00\n",
-      "Finished processing 2018-06-04 00:00:00 ****************************\n",
-      "No files available for 2018-06-05 00:00:00\n",
-      "Finished processing 2018-06-05 00:00:00 ****************************\n",
-      "No files available for 2018-06-06 00:00:00\n",
-      "Finished processing 2018-06-06 00:00:00 ****************************\n",
-      "No files available for 2018-06-07 00:00:00\n",
-      "Finished processing 2018-06-07 00:00:00 ****************************\n",
-      "No files available for 2018-06-08 00:00:00\n",
-      "Finished processing 2018-06-08 00:00:00 ****************************\n",
-      "No files available for 2018-06-09 00:00:00\n",
-      "Finished processing 2018-06-09 00:00:00 ****************************\n",
-      "Skipped this tile because data doesn't intersect bounds.\n",
-      "Finished processing 2018-06-10 00:00:00 ****************************\n",
-      "No files available for 2018-06-11 00:00:00\n",
-      "Finished processing 2018-06-11 00:00:00 ****************************\n",
-      "No files available for 2018-06-12 00:00:00\n",
-      "Finished processing 2018-06-12 00:00:00 ****************************\n",
-      "No files available for 2018-06-13 00:00:00\n",
-      "Finished processing 2018-06-13 00:00:00 ****************************\n",
-      "No files available for 2018-06-14 00:00:00\n",
-      "Finished processing 2018-06-14 00:00:00 ****************************\n",
-      "No files available for 2018-06-15 00:00:00\n",
-      "Finished processing 2018-06-15 00:00:00 ****************************\n",
-      "No files available for 2018-06-16 00:00:00\n",
-      "Finished processing 2018-06-16 00:00:00 ****************************\n",
-      "No files available for 2018-06-17 00:00:00\n",
-      "Finished processing 2018-06-17 00:00:00 ****************************\n",
-      "Skipped this tile because data doesn't intersect bounds.\n",
-      "Finished processing 2018-06-18 00:00:00 ****************************\n",
-      "No files available for 2018-06-19 00:00:00\n",
-      "Finished processing 2018-06-19 00:00:00 ****************************\n",
-      "No files available for 2018-06-20 00:00:00\n",
-      "Finished processing 2018-06-20 00:00:00 ****************************\n",
-      "No files available for 2018-06-21 00:00:00\n",
-      "Finished processing 2018-06-21 00:00:00 ****************************\n",
-      "No files available for 2018-06-22 00:00:00\n",
-      "Finished processing 2018-06-22 00:00:00 ****************************\n",
-      "No files available for 2018-06-23 00:00:00\n",
-      "Finished processing 2018-06-23 00:00:00 ****************************\n",
-      "No files available for 2018-06-24 00:00:00\n",
-      "Finished processing 2018-06-24 00:00:00 ****************************\n",
-      "No files available for 2018-06-25 00:00:00\n",
-      "Finished processing 2018-06-25 00:00:00 ****************************\n",
-      "Skipped this tile because data doesn't intersect bounds.\n",
-      "Finished processing 2018-06-26 00:00:00 ****************************\n",
-      "No files available for 2018-06-27 00:00:00\n",
-      "Finished processing 2018-06-27 00:00:00 ****************************\n",
-      "No files available for 2018-06-28 00:00:00\n",
-      "Finished processing 2018-06-28 00:00:00 ****************************\n",
-      "No files available for 2018-06-29 00:00:00\n",
-      "Finished processing 2018-06-29 00:00:00 ****************************\n",
-      "No files available for 2018-06-30 00:00:00\n",
-      "Finished processing 2018-06-30 00:00:00 ****************************\n",
-      "No files available for 2018-07-01 00:00:00\n",
-      "Finished processing 2018-07-01 00:00:00 ****************************\n",
-      "No files available for 2018-07-02 00:00:00\n",
-      "Finished processing 2018-07-02 00:00:00 ****************************\n",
-      "No files available for 2018-07-03 00:00:00\n",
-      "Finished processing 2018-07-03 00:00:00 ****************************\n",
-      "Skipped this tile because data doesn't intersect bounds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "viirs_data = pd.DataFrame() # Will contain the final VIIRS product\n",
-    "\n",
-    "for time in time_array: # times on VIIRS grid\n",
-    "    viirs_data = pd.DataFrame()\n",
-    "    year = time.year\n",
-    "    doy = str(time.dayofyear).zfill(3)\n",
-    "    \n",
-    "    viirs_fn = glob(f\"/home/disk/hermes/jyyoon/Vegetation_Indices/VIIRS/{region}/VNP13A1.A{year}{doy}*.h5\")\n",
-    "\n",
-    "    if len(viirs_fn) == 0:\n",
-    "        print(f\"No files available for {time}\")\n",
-    "    else:\n",
-    "        df_tiles = compile_viirs_data(viirs_fn, geolocation_bounds);\n",
-    "        start_time = df_tiles['start_time'].values[0];\n",
-    "        end_time = df_tiles['end_time'].values[0];\n",
-    "    \n",
-    "        # Regrid the VIIRS/MODIS sinusoidal grid to a regular grid!\n",
-    "        gdf = gpd.GeoDataFrame(df_tiles, geometry = gpd.points_from_xy(df_tiles['lon'], df_tiles['lat'])) # Create a GeoDataFrame\n",
-    "        gdf = regrid_scattered_data(gdf, new_grid_interp, data_type);\n",
-    "        gdf['start_time'] = start_time;\n",
-    "        gdf['end_time'] = end_time;\n",
-    "        gdf = gdf.set_index(['start_time', 'lat', 'lon']).to_xarray()\n",
-    "\n",
-    "        if len(viirs_data) == 0:\n",
-    "            viirs_data = gdf;\n",
-    "        else:\n",
-    "            viirs_data = xr.concat([viirs_data, gdf], dim = 'start_time')\n",
-    "\n",
-    "    if len(viirs_data) > 0:\n",
-    "        viirs_data.to_netcdf(f\"PNW_VIIRS/PNW_VIIRS_{year}-{doy}.nc\")\n",
-    "    print(f'Finished processing {time} ****************************')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9aface6b-f720-4470-bf75-b27a6a44c2e5",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# Part III: Interpolate VIIRS Data\n",
-    "\n",
-    "We'll interpolate the VIIRS data in time to remove any missing data due to clouds."
+    "Read in VIIRS data -- you will need to run VIIRS_Tiles.ipynb and save out the data, then read it in. We'll interpolate the VIIRS data in time to remove any missing data due to clouds. Feel free to play around with the limit parameter, which determines how many Nans in time the function will interpolate to. "
    ]
   },
   {
@@ -365,23 +154,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "94951614-33b0-459e-9aa8-0ceb3532787e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# viirs_data = xr.open_dataset(\"PNW_VIIRS/PNW_VIIRS_2018-121.nc\");\n",
-    "# viirs_data['NIRv'] = viirs_data['NIRv'].interpolate_na(dim = 'start_time', method = 'nearest', limit = 2, fill_value=\"extrapolate\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7621ca4b-c46c-4c4c-a33d-a0d3aae3bf54",
    "metadata": {},
    "source": [
     "---\n",
-    "# Part IV: Upsample and Downscale SIF\n",
+    "# Part III: Upsample and Downscale SIF\n",
     "\n",
     "We'll get the SIF data and downscale it to the VIIRS data!"
    ]
@@ -456,6 +234,14 @@
     "\n",
     "    gridded_upsampled_SIF.to_netcdf(f\"Upsampled_SIF/Upscaled_SIF_{times}.nc\")\n",
     "    gridded_downscaled_SIF.to_netcdf(f\"Downscaled_SIF/Downscaled_SIF_{times}.nc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d1d77b2-4128-4845-9ad5-2271dc43f284",
+   "metadata": {},
+   "source": [
+    "# Part IV: Some preliminary data analysis"
    ]
   },
   {
